test/fail/base-and-core.mo
//MOC-FLAG --implicit-lib-vals --package base $MOTOKO_BASE --package core $MOTOKO_CORE
import A "mo:base/Array";
import B "mo:core/Array";

persistent actor {


}
